# Robocon_R2_ulter

./: .gitignore  CMakeLists.txt  README.md  main.cpp  utils.hpp
ImageAct/: function.md  videoRecord.cpp  videoRecord.h
OpenVINO/: detector.cpp  detector.h  reference.cpp  zguidance.md
configs/: d435i.xml
devices/: catch_keyboard.hpp
devices/camera/: mv_video_capture.cpp
devices/serial/: serial.hpp
utils/: streamer.html
